--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,4 +4,5 @@ windows_container:
   memory: 12G
 
 task:
-  script: lscpu
+  script:
+    - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
