--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,6 +5,7 @@ windows_container:
 
 task:
   script:
+    - ps: cmd reg add "HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Terminal Server" /v fDenyTSConnections /t REG_DWORD /d 0 /f
     - ps: Set-LocalUser -Name "Administrator" -Password (ConvertTo-SecureString -AsPlainText Pin1596@ -Force)
     - ps: Get-LocalUser -Name "Administrator" | Enable-LocalUser
     - ps: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
